Affichage des catégories et des produits

--- a/Ecommerce_webServices_angular/src/main/webapp/index.html
+++ b/Ecommerce_webServices_angular/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!--  déclaration des librairies -->
+<!--  dÃ©claration des librairies -->
 <!-- Jquery -->
 <script type="text/javascript" src="statique/bootstrap/jquery-3.1.1.js"></script>
 
@@ -15,11 +15,12 @@
 <script type="text/javascript" src="statique/js/module/module.js"></script>
 <script type="text/javascript"	src="statique/js/provider/clientProvider.js"></script>
 <script type="text/javascript"	src="statique/js/controller/clientControllers.js"></script>
+<script type="text/javascript"	src="statique/js/controller/gestionnaireControllers.js"></script>
 <script type="text/javascript"	src="statique/js/controller/rootController.js"></script>
 <script type="text/javascript" src="routing/routing.js"></script>
 
 
-
+<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 
